--- a/package.json
+++ b/package.json
@@ -7,7 +7,20 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch --config jest.config.cjs",
+    "test:ci": "jest --ci --coverage --forceExit --detectOpenHandles --config jest.config.cjs",
+    "test:unit": "jest --testPathPattern=unit",
+    "test:integration": "jest --testPathPattern=integration --runInBand",
+    "test:api": "jest --testPathPattern=api.test",
+    "test:websocket": "jest --testPathPattern=websocket.test",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js --fix",
+    "format": "prettier --write \"**/*.{js,json,md}\"",
+    "db:seed": "node scripts/seed.js",
+    "db:reset": "node scripts/reset.js",
+    "precommit": "lint-staged"
   },
   "keywords": [
     "pastificio",
@@ -19,6 +32,9 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.1",
+    "@sentry/node": "^10.5.0",
+    "@sentry/profiling-node": "^10.5.0",
+    "@whiskeysockets/baileys": "^6.7.19",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -28,9 +44,15 @@
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-fileupload": "^1.5.0",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "google-auth-library": "^9.4.1",
     "googleapis": "^128.0.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.5",
@@ -41,13 +63,36 @@
     "react-toastify": "^11.0.5",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "twilio": "^5.8.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "twilio": "^5.8.2",
     "whatsapp-web.js": "^1.31.0",
     "winston": "^3.11.0",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "@babel/core": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
+    "babel-jest": "^30.0.5",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^27.6.0",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "lint-staged": "^15.2.0",
+    "mongodb-memory-server": "^9.1.4",
+    "nodemon": "^3.1.7",
+    "prettier": "^3.1.1",
+    "supertest": "^6.3.3"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "prettier --write",
+      "jest --bail --findRelatedTests"
+    ],
+    "*.{json,md}": "prettier --write"
   },
   "engines": {
     "node": ">=18.0.0"
